Added home blog layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Domenico Luciani | DLion ~ Blog
+name: Domenico Luciani
 markdown: redcarpet
 pygments: true
 destionation: /home/dlion/sorgenti/me/_site
