Added feed.xml and edited config

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ markdown: redcarpet
 pygments: true
 permalink: /:title/
 production_url: http://github.dlion.it
+name: DLion ~ Blog
+description: Domenico Luciani | DLion ~ Blog
+url: http://github.dlion.it
+
