modified:   _config.yml Added path to link images
Fixed image url into some posts
Added images to public/img/posts dir

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ production_url: http://github.dlion.it
 name: DLion ~ Blog
 description: Domenico Luciani | DLion ~ Blog
 url: http://github.dlion.it
-
+image_url: /public/img/posts
