--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ name: DLion ~ Blog
 description: Domenico Luciani | DLion ~ Blog
 url: http://github.dlion.it
 image_url: /public/img/posts
+paginate: 10
+paginate_path: "/page/:num"
