Added plugins supported by Github

--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,6 @@ paginate_path: "/page/:num"
 future: false
 safe: true
 timezone: Europe/Rome
-gems: [jekyll-mentions, jemoji]
+gems:
+  - jekyll-mentions
+  - jemoji
