--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,13 @@ image_url: /public/img/posts
 future: false
 safe: true
 lsi: false
+markdown: redcarpet
 timezone: Europe/Rome
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "post"
+    values:
+      layout: "post"
+
