--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ defaults:
   -
     scope:
       path: "" # an empty string here means all files in the project
-      type: "post"
+      type: "posts"
     values:
-      layout: "post"
+      layout: "posts"
 
