--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ github: DLion
 twitter: dlion92
 linkedin: dlion
 disqus: dlion
+author: Domenico Luciani
 gplus: +DomenicoLeoneLuciani
 image_url: /public/img/posts
 future: false
