--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ text:
 markdown:     kramdown
 #redcarpet:
 #  extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
+permalink:   /:title/
 paginate:     15
 sass:
   compressed: true
