--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ bing_verification:
 
 # Optional features
 animated:             false
-show_related_posts:   true
+show_related_posts:   false
 show_post_footers:    true
 show_social_icons:    true
 ajaxify_contact_form: false
