--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ facebook_comments_number: 10
 github_username: DLion
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username: DLion92
 skype_username:
 steam_nickname:
 google_plus_id:
